            be used without "@n." prefix,  *F() can not be used.
* xylib: RIET7/LHPM/CSRIET/ILL_D1A5/PSI_DMC .dat filetypes added
* non-Windows platforms: using HTML manual (in default browser) instead of HTB
* GUI: command line history is stored in ~/.fityk/history
* --disable-3rdparty configure flag prevents building with xylib from 3rdparty/
* bug fixes (there are some bug fixes in every release)

User-visible changes in version 0.8.4  (2008-02-15):
* xylib: pdCIF format was added

User-visible changes in version 0.8.3  (2008-01-25):
* data import is done using (modified) xylib library. 
  VAMAS and a few other new file formats are supported.
* added hyperbolic functions
* command "@n.revert" reloads data points from file
* GUI: menu item "Apply to all datasets" was removed. Now all data-related
  menu items and buttons are applied to datasets selected at the sidebar
* GUI: new dataset is opened in a new slot now (it was replacing an active 
  dataset before)

User-visible changes in version 0.8.2  (2007-08-21):
* multiple fixes for MacOSX, added macosx/ directory (Ken McIvor)
* reading multiple y columns from data file: "@+ < foo.xy:0,5/6/7" (or :0,5-7)
* "Tip of the day" removed (tips.txt deleted). 
* added SVG icon (fityk.svg) and MIME type info (fityk.xml) 
* removed files AUTHORS and ChangeLog
* the API is now a Fityk class
* GUI: setting baseline as convex hull of data points (experimental)
* XPS Shirley background removing
* minor improvements and bug fixes (e.g. "reset" was not working in 0.8.1)

User-visible changes in version 0.8.1  (2007-04-23):
* extended version info can be shown by "info+ version"
* displaying Gaussian-FWHM and Lorentzian-FWHM of Voigt function
* GUI, MS Windows: configuration is now stored in files, not in registry
* GUI: support for any numbers of config files. 
* changes in command-line parameters
* "_EXECUTED_SCRIPT_DIR_/" in scripts is replaced with the script directory
* GUI: logarithmic x scale and reversed y scale 