@@ -1,0 +1,43 @@
+static const unsigned char zoom_fit16_png[] = {
+0x89, 0x50, 0x4e, 0x47, 0x0d, 0x0a, 0x1a, 0x0a, 0x00, 0x00, 0x00, 0x0d, 
+0x49, 0x48, 0x44, 0x52, 0x00, 0x00, 0x00, 0x10, 0x00, 0x00, 0x00, 0x10, 
+0x08, 0x06, 0x00, 0x00, 0x00, 0x1f, 0xf3, 0xff, 0x61, 0x00, 0x00, 0x00, 
+0x06, 0x62, 0x4b, 0x47, 0x44, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0xf9, 
+0x43, 0xbb, 0x7f, 0x00, 0x00, 0x00, 0x09, 0x70, 0x48, 0x59, 0x73, 0x00, 
+0x00, 0x0b, 0x12, 0x00, 0x00, 0x0b, 0x12, 0x01, 0xd2, 0xdd, 0x7e, 0xfc, 
+0x00, 0x00, 0x00, 0x07, 0x74, 0x49, 0x4d, 0x45, 0x07, 0xd5, 0x04, 0x09, 
+0x16, 0x1c, 0x39, 0xa7, 0x76, 0xc4, 0xe1, 0x00, 0x00, 0x01, 0x70, 0x49, 
+0x44, 0x41, 0x54, 0x38, 0xcb, 0x95, 0x92, 0xbd, 0x6e, 0xe2, 0x40, 0x14, 
+0x85, 0x3f, 0xbc, 0x79, 0x0f, 0x5b, 0x29, 0x78, 0x02, 0x2a, 0x9a, 0x74, 
+0x53, 0xed, 0x7b, 0xac, 0x1b, 0x24, 0x8a, 0x34, 0x14, 0x5b, 0x22, 0x9e, 
+0x03, 0xc9, 0x1d, 0x0d, 0x4f, 0x40, 0x47, 0xe5, 0x2e, 0x05, 0xed, 0x16, 
+0x60, 0x61, 0x59, 0x8b, 0x25, 0x87, 0x28, 0x3f, 0x63, 0x7b, 0xce, 0x16, 
+0xb1, 0x59, 0x48, 0x80, 0xdd, 0x1c, 0x69, 0x34, 0x9a, 0xd1, 0xcc, 0x37, 
+0xe7, 0x9e, 0xb9, 0x70, 0xaa, 0x7b, 0x20, 0x06, 0xde, 0x9a, 0x11, 0x37, 
+0x7b, 0xff, 0xd4, 0x2d, 0x10, 0x77, 0xbb, 0x5d, 0x2d, 0x97, 0x4b, 0xe5, 
+0x79, 0xae, 0xdd, 0x6e, 0xa7, 0xd9, 0x6c, 0x26, 0x63, 0x8c, 0x1a, 0xd0, 
+0xed, 0x35, 0x40, 0x3c, 0x99, 0x4c, 0x54, 0x14, 0x85, 0x9c, 0x73, 0x72, 
+0xce, 0xa9, 0xae, 0x6b, 0x55, 0x55, 0xa5, 0x2c, 0xcb, 0x34, 0x1c, 0x0e, 
+0x5b, 0xc8, 0x59, 0xdd, 0x1b, 0x63, 0x54, 0x14, 0x85, 0x00, 0x01, 0x6a, 
+0xd5, 0xae, 0xd3, 0x34, 0x6d, 0x9d, 0x9c, 0x2d, 0x27, 0x9e, 0xcf, 0xe7, 
+0x72, 0xce, 0x1d, 0x2e, 0x3b, 0xe7, 0x4e, 0x20, 0xd6, 0x5a, 0x45, 0x51, 
+0x74, 0xd1, 0xc5, 0x5b, 0x9e, 0xe7, 0x07, 0xdb, 0x6d, 0x09, 0xc7, 0x10, 
+0x6b, 0xad, 0x92, 0x24, 0x51, 0x13, 0xec, 0x89, 0x6e, 0x78, 0x7f, 0x16, 
+0x49, 0x78, 0x9e, 0xf7, 0x89, 0xfe, 0x6e, 0xe2, 0xef, 0xfc, 0x51, 0x1e, 
+0xf0, 0xb0, 0x58, 0x2c, 0x90, 0x44, 0xa7, 0xd3, 0xf9, 0x7c, 0xc0, 0xf3, 
+0x90, 0xc4, 0x6a, 0xb5, 0x02, 0x78, 0xb8, 0x18, 0x62, 0x96, 0x65, 0x87, 
+0xd0, 0x5a, 0xfb, 0xed, 0x7a, 0xbb, 0xdd, 0x5e, 0x0d, 0x11, 0x20, 0x1e, 
+0x8f, 0xc7, 0x4a, 0xd3, 0x54, 0xd6, 0x5a, 0x55, 0x55, 0xa5, 0xba, 0xae, 
+0x55, 0x96, 0xa5, 0xd6, 0xeb, 0xb5, 0x06, 0x83, 0x81, 0x80, 0x0a, 0xf8, 
+0x71, 0xb5, 0x91, 0x8c, 0x31, 0x8a, 0xa2, 0x48, 0x49, 0x92, 0x68, 0xb3, 
+0xd9, 0x68, 0x3a, 0x9d, 0xb6, 0x2f, 0xbf, 0x02, 0x8f, 0xc0, 0x1e, 0xf8, 
+0x05, 0x7c, 0xbf, 0xd8, 0x13, 0x67, 0x5a, 0xf9, 0x27, 0xe0, 0x07, 0x41, 
+0xb0, 0x0f, 0x82, 0xe0, 0x09, 0x78, 0x06, 0x0a, 0xa0, 0x7f, 0xf2, 0x13, 
+0x8d, 0xbe, 0x1d, 0x8d, 0xe3, 0x44, 0x7d, 0xe0, 0x77, 0x18, 0x86, 0x65, 
+0xaf, 0xd7, 0x7b, 0x69, 0xdc, 0x3c, 0x37, 0xfb, 0xff, 0x2d, 0x1f, 0xd8, 
+0x8f, 0x46, 0xa3, 0xba, 0xdf, 0xef, 0x57, 0x4d, 0x39, 0x4f, 0x5f, 0x05, 
+0xf8, 0xc0, 0x6b, 0x18, 0x86, 0xa5, 0xef, 0xfb, 0xe5, 0x57, 0x01, 0xc7, 
+0x90, 0x2d, 0x50, 0x03, 0x77, 0x7f, 0x00, 0xe1, 0xc1, 0x1b, 0x86, 0xaa, 
+0x55, 0x71, 0x63, 0x00, 0x00, 0x00, 0x00, 0x49, 0x45, 0x4e, 0x44, 0xae, 
+0x42, 0x60, 0x82, 
+};
